docs(api): add search method for City in Swagger api doc
